# dlna-server

./: .gitattributes  .gitignore  AGENTS.MD  CHANGELOG.md  CMakeLists.txt  COMPLETION-REPORT-nested-hls-diagnosis.md  CONTRIBUTING.md  DLNA_Server_Windows_Agent_Prompt.md  LICENSE  README.md  SECURITY.md  _debug_browse.py  android-vs-pc-dlna-structure-comparison.txt  build-assets.bat  build-linux-appdir.ps1  build-linux-appimage.ps1  build-output.ps1  config.ini  diag_mrunning.txt  diag_scan.txt  dlna-server-code-review-main-30-6-26.md  dlna-server-code-review.md  dlna-server-detection.md  fix-plan.md  handoff.md  hls-playlist-findings.txt  hls-side-by-side-comparison.txt  hls_access_comparison_report.txt  install-wsl.ps1  macos_port_workflow_dlna_server_repo.md  msearch.ps1  pytest.ini  remaining-features-and-fixes.md  research-investigation-prompt.md  scratch_browse.ps1  start-server.bat  tempCodeRunnerFile.bat  temp_add_semicolon.py  temp_add_urlbase.py  temp_add_urlbase_correct.py  (+11 more)
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  readme-banner-update.yml  release-assets.yml  release-notes-banner.yml  update-banner.yml
docs/: ARCHITECTURE.md  BUILD.md  CONFIGURATION.md  HTTP-SERVER.md  KNOWN-ISSUES.md  MEDIA-SCANNING.md  SSDP-DISCOVERY.md  THREADING-AND-CONCURRENCY.md  dlna-server-nested-hls-android-reference-insights-07-7-26.md  hardening-notes.md  linux-gui-parity-blueprint.md  pdf-dlna-framework-upgrade-blueprint.md  ui-spec.md  ums-upgrade-roadmap.md
packaging/flatpak/: com.github.14ag.dlna_server.desktop  com.github.14ag.dlna_server.metainfo.xml  com.github.14ag.dlna_server.yml
packaging/linux/: AppRun  dlna-server-gui  dlna-server.appdata.xml.in  dlna-server.appimage.desktop  install_desktop.cmake.in
packaging/macos/: Info.plist.in  dlna-server-gui
resources/: app.rc  icons.py  resource.h
scripts/: build-linux-desktop-assets.sh  build-macos-dmg.sh  build-release-assets.ps1  install-posix-assets.sh
src/: access_key_hook.cpp  access_key_hook.h  access_keys.cpp  access_keys.h  bounded_thread_pool.cpp  bounded_thread_pool.h  cli_flags.h  config.cpp  config.h  contentdirectory.cpp  contentdirectory.cpp.bak  contentdirectory.h  context_menu_integration.cpp  context_menu_integration.h  dark_frame.cpp  dark_frame.h  dlna_utils.cpp  dlna_utils.h  firewall_access.h  firewall_access_posix.cpp  firewall_access_win.cpp  fltk_gui_main.cpp  fs_backend.h  fs_backend_posix.cpp  fs_backend_win32.cpp  help_dialog.cpp  help_dialog.h  hover_focus_state.h  http_common.cpp  http_common.h  httpserver.cpp  httpserver.cpp.bak  httpserver.h  input_gate.h  ipwhitelist.cpp  ipwhitelist.h  log.cpp  log.h  logdlg.cpp  logdlg.h  (+63 more)
tests/: agentic-ftp-nested-access-original.ps1  agentic-ftp-nested-access.ps1  bounded_thread_pool_test.cpp  conftest.py  media_database_thread_safety_test.cpp  media_scan_common_publish_test.cpp  media_sources_publish_test.cpp  playlist_scan_concurrency_test.cpp  scratch_browse.ps1  scratch_browse_debug.ps1  task_group_test.cpp  test_access_key_mnemonics.py  test_cli_flags_single_source.py  test_code_quality_performance_fixes.py  test_concurrency_memory_review_findings.py  test_config_load_no_deadlock.py  test_config_restart.py  test_content_directory_soap.py  test_deep_review_findings_sources.py  test_desktop_integration_static.py  test_dlna_review_fixes.py  test_duplicate_browse_mnemonics.py  test_existing_feature_improvements.py  test_firewall_access_sources.py  test_ftp_nested_playlist_fixes.py  test_gui_close_lifecycle.py  test_hardening_fixes.py  test_hls_manifest_detection_sources.py  test_hls_manifest_proxy.py  test_hls_protocolinfo_and_scanfolder_fixes.py  test_hover_focus_state.py  test_httpserver_listen_socket_hardening.py  test_incremental_scan.py  test_initial_scan_completion_fix.py  test_input_gate.py  test_keyboard_cue_state.py  test_linux_appdir_packaging.py  test_linux_icon_resolution.py  test_media_scan_logging.py  test_media_sources_concurrency.py  (+36 more)
tests/fixtures/: make_nested_playlist_tree.py  slow_playlist_server.py  soap_client.py  ssdp_listener.py
tests/test media/: test-clip.srt  test-hls-extended-playlist.m3u8  test-hls-playlist.m3u8  test-local-playlist.m3u
